--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
 <body>
+
+    <!-- Progress bar -->
     
-    <main class="h-screen w-full flex justify-center items-center bg-[#111] text-white">
+    <!-- <main class="h-screen w-full flex justify-center items-center bg-[#111] text-white">
         <div class="container h-[30%] w-[40%] bg-[#222] rounded-xl flex flex-col justify-start items-center">
             <div class="progress-bar h-6 w-[80%] rounded-lg bg-gray-200">
                 <div class="fill rounded-lg"></div>
@@ -18,6 +20,25 @@
                 <h3 class="text-start text-2xl font-bold">0%</h3>
                 <button class="bg-blue-500 rounded-lg">Download</button>
             </div>
+        </div>
+    </main> -->
+
+
+
+    <!-- Toggle button -->
+
+    <main>
+        <div class="elem">
+            <h1>Vishal</h1>
+            <button>Add Friend</button>
+        </div>
+        <div class="elem">
+            <h1>Root</h1>
+            <button>Add Friend</button>
+        </div>
+        <div class="elem">
+            <h1>Smith</h1>
+            <button>Add Friend</button>
         </div>
     </main>
 
