In progress 3rd

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <!-- Toggle button -->
 
-    <main>
+    <!-- <main>
         <div class="elem">
             <h1>Vishal</h1>
             <button>Add Friend</button>
@@ -40,8 +40,24 @@
             <h1>Smith</h1>
             <button>Add Friend</button>
         </div>
-    </main>
+    </main> -->
 
+
+
+
+
+
+    <!-- Event Bubbling -->
+
+    <main>
+        <section>
+            <div class="all-reels">
+                <div class="reel">
+                    <img src="" alt="">
+                </div>
+            </div>
+        </section>
+    </main>
     <script src="script.js"></script>
 </body>
 </html>
