Practicing Event Bubbling

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Progress Bar</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.6.0/remixicon.css" integrity="sha512-kJlvECunwXftkPwyvHbclArO8wszgBGisiLeuDFwNM8ws+wKIw0sv1os3ClWZOcrEB2eRXULYUsm8OVRGJKwGA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
 
@@ -53,7 +54,64 @@
         <section>
             <div class="all-reels">
                 <div class="reel">
-                    <img src="" alt="">
+                    <img src="https://images.unsplash.com/photo-1670088776580-e44d6a2a29e3?q=80&w=1935&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="">
+                    <div class="bottom">
+                        <div class="user">
+                            <img src="https://images.unsplash.com/photo-1438761681033-6461ffad8d80?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="">
+                            <h4>Joy_Root</h4>
+                            <button>Follow</button>
+                        </div>
+                        <div class="title">
+                            <h4>Lorem ipsum dolor sit amet consectetur adipisicing.</h4>
+                        </div>
+                    </div>
+                    <div class="right">
+                        <div class="like">
+                            <h4 class="like-icon"><i class="ri-heart-line"></i></h4>
+                            <h6>200</h6>
+                        </div>
+                         <div class="comment">
+                            <h4 class="comment-icon"><i class="ri-chat-3-line"></i></h4>
+                            <h6>47</h6>
+                        </div>
+                        <div class="share">
+                            <h4 class="share-icon"><i class="ri-share-2-line"></i></i></h4>
+                            <h6>47</h6>
+                        </div>
+                        <div class="menu">
+                            <h4 class="menu-icon"><i class="ri-more-2-line"></i></i></h4>
+                        </div>
+                    </div>
+                </div>
+                <div class="reel">
+                    <img src="https://images.unsplash.com/photo-1501786223405-6d024d7c3b8d?q=80&w=1974&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="">
+                    <div class="bottom">
+                        <div class="user">
+                            <img src="https://images.unsplash.com/photo-1438761681033-6461ffad8d80?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="">
+                            <h4>Joy_Root</h4>
+                            <button>Follow</button>
+                        </div>
+                        <div class="title">
+                            <h4>Lorem ipsum dolor sit amet consectetur adipisicing.</h4>
+                        </div>
+                    </div>
+                    <div class="right">
+                        <div class="like">
+                            <h4 class="like-icon"><i class="ri-heart-line"></i></h4>
+                            <h6>200</h6>
+                        </div>
+                         <div class="comment">
+                            <h4 class="comment-icon"><i class="ri-chat-3-line"></i></h4>
+                            <h6>47</h6>
+                        </div>
+                        <div class="share">
+                            <h4 class="share-icon"><i class="ri-share-2-line"></i></i></h4>
+                            <h6>47</h6>
+                        </div>
+                        <div class="menu">
+                            <h4 class="menu-icon"><i class="ri-more-2-line"></i></i></h4>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
